<?xml version="1.0"?>
<package>
    <name>walker_gazebo</name>
    <version>0.1.0</version>
    <description>The walker package</description>

    <!-- One maintainer tag required, multiple allowed, one person per tag -->
    <!-- Example:  -->
    <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
    <maintainer email="jinliang.chen@ubtrobot.com">an</maintainer>

    <license>Apache 2.0</license>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>roscpp rospy</build_depend>

    <run_depend>gazebo_plugins</run_depend>
    <run_depend>gazebo_ros</run_depend>
    <run_depend>gazebo_ros_control</run_depend>
    <run_depend>mimic_joint_plugin</run_depend>
    <run_depend>urdf</run_depend>
    <run_depend>xacro</run_depend>
    <run_depend>roscpp rospy</run_depend>

    <!-- The export tag contains other, unspecified, tags -->
    <export>
     <!-- Other tools can request additional information be placed here -->

    </export>
</package>
